fixed missing link

--- a/_notebooks/2020-03-12-time-series-using-deep-learning-part-1.ipynb
+++ b/_notebooks/2020-03-12-time-series-using-deep-learning-part-1.ipynb
@@ -10,7 +10,6 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
     "- author: Farid Hassainia, PhD\n",
     "- categories: [time series, deep learning, AI, classification, regression, segmentation, forecasting]"
    ]
@@ -137,7 +136,8 @@
     "\n",
     "*#3 represents the 'Not clear' Command (see picture here above)*\n",
     "\n",
-    "![](images/ts-right-arm.png)"
+    "![](images/ts-right-arm.png)\n",
+    "<img src=\"https://github.com/ai-fast-track/timeseries/blob/master/images/ts-right-arm.png?raw=1\"><img src=\"https://github.com/ai-fast-track/timeseries/blob/master/images/ts-left-arm.png?raw=1\">"
    ]
   },
   {
