--- a/_notebooks/2020-03-14-mytest.ipynb
+++ b/_notebooks/2020-03-14-mytest.ipynb
@@ -137,7 +137,8 @@
     "\n",
     "*#3 represents the 'Not clear' Command (see picture here above)*\n",
     "\n",
-    "![](images/ts-right-arm.png)"
+    "![](images/ts-right-arm.png)\n",
+    "![](images/ts-left-arm.png)"
    ]
   },
   {
