added python back ticks

--- a/_notebooks/2020-03-14-mytest.ipynb
+++ b/_notebooks/2020-03-14-mytest.ipynb
@@ -10,9 +10,8 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
-    "- author: Farid Hassainia, PhD\n",
-    "- categories: [time series, deep learning, AI, classification, regression, segmentation, forecasting]"
+    "- categories: [timeseries]\n",
+    "- author: Farid Hassainia, PhD"
    ]
   },
   {
@@ -86,16 +85,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#collapse-show\n",
+    "```python\n",
     "path = unzip_data(URLs_TS.NATOPS)\n",
     "dls = TSDataLoaders.from_files(bs=32,fnames=[path/'NATOPS_TRAIN.arff', path/'NATOPS_TEST.arff'], batch_tfms=[Normalize()]) \n",
     "learn = ts_learner(dls)\n",
-    "learn.fit_one_cycle(25, lr_max=1e-3) "
+    "learn.fit_one_cycle(25, lr_max=1e-3)\n",
+    "```"
    ]
   },
   {
@@ -161,12 +159,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "path = unzip_data(URLs_TS.NATOPS)"
+    "```python\n",
+    "path = unzip_data(URLs_TS.NATOPS)\n",
+    "```"
    ]
   },
   {
@@ -182,49 +180,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using `Datasets` class"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#collapse-show\n",
-    "tfms = [[ItemGetter(0), ToTensorTS()], [ItemGetter(1), Categorize()]]\n",
-    "# Create a dataset\n",
-    "ds = Datasets(items, tfms, splits=splits)\n",
-    "ax = show_at(ds, 2, figsize=(1,1))"
+    "## Using Datasets class"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a `Dataloaders` object"
+    "```python\n",
+    "tfms = [[ItemGetter(0), ToTensorTS()], [ItemGetter(1), Categorize()]]\n",
+    "# Create a dataset\n",
+    "ds = Datasets(items, tfms, splits=splits)\n",
+    "ax = show_at(ds, 2, figsize=(1,1))\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#collapse-show\n",
+    "## Creating a Dataloaders object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#```python\n",
     "bs = 32                            \n",
     "# Normalize at batch time\n",
     "tfm_norm = Normalize(scale_subtype = 'per_sample_per_channel', scale_range=(0, 1)) \n",
-    "dls1 = ds.dataloaders(bs=bs, val_bs=bs * 2, after_batch=[tfm_norm]) "
+    "dls1 = ds.dataloaders(bs=bs, val_bs=bs * 2, after_batch=[tfm_norm])\n",
+    "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dls1.show_batch(max_n=9, chs=range(0,12,3))"
+    "```python\n",
+    "dls1.show_batch(max_n=9, chs=range(0,12,3))\n",
+    "```"
    ]
   },
   {
@@ -235,16 +231,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#collapse-show\n",
+    "```python\n",
     "# Number of channels\n",
     "c_in = get_n_channels(dls2.train) # 24 for NATOPS dataset\n",
     "# Number of classes\n",
-    "c_out= dls2.c  # 6 for NATOPS dataset"
+    "c_out= dls2.c  # 6 for NATOPS dataset\n",
+    "```"
    ]
   },
   {
@@ -255,12 +250,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model = inception_time(c_in, c_out).to(device=default_device())"
+    "```python\n",
+    "model = inception_time(c_in, c_out).to(device=default_device())\n",
+    "```"
    ]
   },
   {
@@ -271,12 +266,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "learn = Learner(dls2, model, opt_func=Ranger, loss_func=LabelSmoothingCrossEntropy(), metrics=accuracy)"
+    "```python\n",
+    "learn = Learner(dls2, model, opt_func=Ranger, loss_func=LabelSmoothingCrossEntropy(), metrics=accuracy)\n",
+    "```"
    ]
   },
   {
@@ -287,14 +282,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#collapse-show\n",
+    "```python\n",
     "lr_min, lr_steep = learn.lr_find()\n",
-    "lr_min, lr_steep"
+    "lr_min, lr_steep\n",
+    "```"
    ]
   },
   {
@@ -305,12 +299,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "learn.fit_one_cycle(30, lr_max=lr_steep)"
+    "```python\n",
+    "learn.fit_one_cycle(30, lr_max=lr_steep)\n",
+    "```python"
    ]
   },
   {
@@ -328,12 +322,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "learn.show_results(max_n=9, chs=range(0,12,3))"
+    "```python\n",
+    "learn.show_results(max_n=9, chs=range(0,12,3))\n",
+    "```python"
    ]
   },
   {
@@ -344,14 +338,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#collapse-show\n",
+    "```python\n",
     "interp = ClassificationInterpretation.from_learner(learn)\n",
-    "interp.plot_confusion_matrix()"
+    "interp.plot_confusion_matrix()\n",
+    "```"
    ]
   },
   {
@@ -364,12 +357,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#collapse-show\n",
+    "```python\n",
     "# Install the latest version of fastai shared on github\n",
     "!pip install git+https://github.com/fastai/fastai2.git\n",
     "\n",
@@ -377,7 +368,8 @@
     "!pip install git+https://github.com/fastai/fastcore.git\n",
     "\n",
     "# Install the latest version of timeseries shared on github\n",
-    "!pip install git+https://github.com/ai-fast-track/timeseries.git"
+    "!pip install git+https://github.com/ai-fast-track/timeseries.git\n",
+    "```"
    ]
   },
   {
@@ -392,7 +384,7 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "I hope this first article convey you into trying the `timesries` package. If you give it a try and found it interesting/helpful, please let others know it by staring it on github, and share with your friends and colleagues who might be interested in this topic.\n",
+    "I hope this first article convey you into trying the timesrie` package. If you give it a try and found it interesting/helpful, please let others know it by staring it on github, and share with your friends and colleagues who might be interested in this topic.\n",
     "\n",
     "Until the next post, I wish everybody well, and I hope you and your family, friends, loved ones will stay safe from this COVID-19 threat. I hope that something good will come out of this disruptive situation. As a positive outcome, we already have seen how more and more people are reaching out to each others. I hope the fastai community will use this adversity to build something even greater. I can already see this impact in growing online user group with video-conferences which will have a positive impact in sharing and spreading knowledge and ultimately democratizing further AI and Deep Learning.  \n"
    ]
