updated images and css file

--- a/_notebooks/2020-03-14-mytest.ipynb
+++ b/_notebooks/2020-03-14-mytest.ipynb
@@ -206,9 +206,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#```python\n",
+    "```python\n",
     "bs = 32                            \n",
-    "# Normalize at batch time\n",
     "tfm_norm = Normalize(scale_subtype = 'per_sample_per_channel', scale_range=(0, 1)) \n",
     "dls1 = ds.dataloaders(bs=bs, val_bs=bs * 2, after_batch=[tfm_norm])\n",
     "```"
@@ -221,6 +220,13 @@
     "```python\n",
     "dls1.show_batch(max_n=9, chs=range(0,12,3))\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/show-batch.png)"
    ]
   },
   {
@@ -304,7 +310,7 @@
    "source": [
     "```python\n",
     "learn.fit_one_cycle(30, lr_max=lr_steep)\n",
-    "```python"
+    "```"
    ]
   },
   {
@@ -312,6 +318,13 @@
    "metadata": {},
    "source": [
     "### Ploting the loss function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/plot-loss.png)"
    ]
   },
   {
@@ -327,7 +340,14 @@
    "source": [
     "```python\n",
     "learn.show_results(max_n=9, chs=range(0,12,3))\n",
-    "```python"
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](images/show-results.png)"
    ]
   },
   {
@@ -346,6 +366,11 @@
     "interp.plot_confusion_matrix()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
