--- a/_notebooks/2020-03-14-mytest.ipynb
+++ b/_notebooks/2020-03-14-mytest.ipynb
@@ -370,7 +370,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "![](images/confusion-matrix.png)"
+   ]
   },
   {
    "cell_type": "markdown",
