changed code style

--- a/_notebooks/2020-03-16-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-16-how-to-pip-install-package.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 W=ways to pip install a package - fastai2 use-case\n",
+    "# 3 ways to pip install a package - fastai2 use-case\n",
     "> detailed description on how to pip install a package and to understand when to use each of the 3 methods for your own use-case.\n",
     "\n",
     "- toc: true \n",
@@ -64,10 +64,14 @@
     "To install fastai2 from [fastai2 pypi repository] (https://pypi.org/project/fastai2/), type the following command either from:\n",
     "\n",
     "1.\tthe terminal:\n",
-    "`pip install fastai2`\n",
+    "```bash\n",
+    "pip install fastai2\n",
+    "```\n",
     "\n",
     "2.\tor from a Jupyter notebook cell:\n",
-    "`!pip install fastai2`\n",
+    "```bash\n",
+    "!pip install fastai2\n",
+    "```\n",
     "\n",
     "The difference between the 2 options is the use of the `!` in the case of Jupyter notebook. However, the result is the same, the fastai2 package will be install in the current active environment. "
    ]
@@ -85,7 +89,9 @@
    "source": [
     "To check where the fastai2 package has been install, run the following command:\n",
     "\n",
-    "`pip show fastai2`\n",
+    "```bash\n",
+    "pip show fastai2\n",
+    "```\n",
     "\n",
     "This command displays some useful information:\n"
    ]
@@ -94,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```bash\n",
+    "```jupyter\n",
     "Name: fastai2\n",
     "Version: 0.0.11\n",
     "Summary: Version 2 of the fastai library\n",
@@ -123,7 +129,7 @@
    "source": [
     "## Method 2:\n",
     "\n",
-    ">Note: This method is used by users who are interested in new using the latest and the greatest features found the fastai2 Github repository. They usually are not in the process of developing new modules that will be used as fastai2 extension. If all this is not bit blurry, everything will be crystakl clear by the end of reading Method 3."
+    ">Note: This method is used by users who are interested in new using the latest and the greatest features found the fastai2 Github repository. They usually are not in the process of developing new modules that will be used as fastai2 extension. If all this is  bit blurry, everything will be crystakl clear by the end of reading Method 3."
    ]
   },
   {
@@ -147,9 +153,14 @@
     "To use a concrete example, at certain moment Jeremy shared a Kaggle kernel in order to show how to use a new developed module called medical. The latter was under development and was not available on the pypi repository. Therefore the solution was to advice the users to install the latest fastai2 version (that includes the medical module) by running the following command either on:\n",
     "\n",
     "1.\tthe terminal:\n",
-    "` pip install git+https://github.com/fastai/fastai2.git`\n",
+    "```bash\n",
+    "pip install git+https://github.com/fastai/fastai2.git\n",
+    "```\n",
+    "\n",
     "2.\tor from a Jupyter notebook cell:\n",
-    "`! !pip install git+https://github.com/fastai/fastai2.git`\n"
+    "```python \n",
+    "!pip install git+https://github.com/fastai/fastai2.git\n",
+    "```\n"
    ]
   },
   {
