--- a/_notebooks/2020-03-16-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-16-how-to-pip-install-package.ipynb
@@ -64,12 +64,12 @@
     "To install fastai2 from [fastai2 pypi repository] (https://pypi.org/project/fastai2/), type the following command either from:\n",
     "\n",
     "1.\tthe terminal:\n",
-    "```bash\n",
+    "```python\n",
     "pip install fastai2\n",
     "```\n",
     "\n",
     "2.\tor from a Jupyter notebook cell:\n",
-    "```bash\n",
+    "```python\n",
     "!pip install fastai2\n",
     "```\n",
     "\n",
@@ -89,7 +89,7 @@
    "source": [
     "To check where the fastai2 package has been install, run the following command:\n",
     "\n",
-    "```bash\n",
+    "```python\n",
     "pip show fastai2\n",
     "```\n",
     "\n",
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```jupyter\n",
+    "```python\n",
     "Name: fastai2\n",
     "Version: 0.0.11\n",
     "Summary: Version 2 of the fastai library\n",
@@ -129,7 +129,7 @@
    "source": [
     "## Method 2:\n",
     "\n",
-    ">Note: This method is used by users who are interested in new using the latest and the greatest features found the fastai2 Github repository. They usually are not in the process of developing new modules that will be used as fastai2 extension. If all this is  bit blurry, everything will be crystakl clear by the end of reading Method 3."
+    ">Note: This method is used by users who are interested in new using the latest and the greatest features found the fastai2 Github repository. In general, they are interested in using the latest fastai2 package without the intention to build new modules that can be used as fastai2 extensions. If this sound a bit unclear, rest assured that everything will be crystal clear by the end of reading Method 3."
    ]
   },
   {
@@ -143,17 +143,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Note: This option is used by users who want access to the latest version of fastai2. In general, they are interested in using the latest fastai2 package without the intention to build new modules that can be used as fastai2 extensions. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "To use a concrete example, at certain moment Jeremy shared a Kaggle kernel in order to show how to use a new developed module called medical. The latter was under development and was not available on the pypi repository. Therefore the solution was to advice the users to install the latest fastai2 version (that includes the medical module) by running the following command either on:\n",
     "\n",
     "1.\tthe terminal:\n",
-    "```bash\n",
+    "```python\n",
     "pip install git+https://github.com/fastai/fastai2.git\n",
     "```\n",
     "\n",
@@ -170,9 +163,16 @@
     "You might have already noticed that we replaced `fastai2` by ` git+https://github.com/fastai/fastai2.git` which means that you are installing the latest source code found in the fastai2 GitHub repository.\n",
     ">Important: When using this option, it is very important to also install the `fastcore` library` using the very same method:\n",
     "\n",
+    "from the command line:\n",
+    "```python\n",
+    "pip install git+https://github.com/fastai/fastai2.git\n",
+    "``` \n",
     "\n",
-    "` pip install git+https://github.com/fastai/fastai2.git` from the command line, and \n",
-    "`!pip install git+https://github.com/fastai/fastai2.git` from a Jupyter notebook cell"
+    "and from a Jupyter notebook cell:\n",
+    "\n",
+    "```python\n",
+    "!pip install git+https://github.com/fastai/fastai2.git\n",
+    "``` "
    ]
   },
   {
@@ -181,6 +181,41 @@
    "source": [
     "You may ask yourself why do we have to also install the fastcore library from GitHub given the fact that fastai2 will always install fastcore because it is part of its requirements. The answer is because fastai2 will install the latest version found in the pypi repository and not the latest version found on GitHub. If the fastai github version is using the new capabilities found in the fastcore latest GitHub version. This will lead to an incompatibility if you are using fastai latest GitHub version mixed with the fastcore pypi version, you will end up have some issues and some errors will surface. Therefore, better to have the habit to pip install both of them using the same method (method 2 in this case)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Method 3:\n",
+    "\n",
+    ">Note: This method is used by developers who are actively building new modules that depends on fastai2. These developers are usually actively adding features to their modules and want to make sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will realize that their code is incompatible with fastai2 one.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The goal is to keep your library (which depends on fastai2) aligned to the fastai2 one hand, and to avoid to keep pip installing both fastai2 and fastcore every time new version are released (this would have been the case had we used Method 2). There exists a magic method (Method 3) that consists in using a so-called editable version of both fastai2 and fastcore."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Installing an editable version of fastai2 is pretty straightforward. All we have to do is to follow these 3 simple steps, on a terminal console:\n",
+    "```python\n",
+    "git clone https://github.com/fastai/fastai2\n",
+    "cd fastai2\n",
+    "pip install -e .\n",
+    " ```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
