--- a/_notebooks/2020-03-16-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-16-how-to-pip-install-package.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method 1:\n",
+    "## Method 1\n",
     ">Note: The first method is the most common way to install a stable version of a python package. It will be widely used once fastai2 will be officially released.\n"
    ]
   },
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method 2:\n",
+    "## Method 2\n",
     "\n",
     ">Note: This method is used by users who are interested in new using the latest and the greatest features found the fastai2 Github repository. In general, they are interested in using the latest fastai2 package without the intention to build new modules that can be used as fastai2 extensions. If this sound a bit unclear, rest assured that everything will be crystal clear by the end of reading Method 3."
    ]
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method 3:\n",
+    "## Method 3\n",
     "\n",
     ">Note: This method is used by developers who are actively building new modules that depends on fastai2. These developers are usually actively adding features to their modules and want to make sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will realize that their code is incompatible with fastai2 one.\n"
    ]
@@ -211,10 +211,120 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Basically, we are cloning the fastai2 repository, then hopping into the fastai2 folder, finally issuing the command to pip install the package (fastai2) from the current folder (hence the use of the dot `.`) as an editable version by using the `-e` switch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also to follow the same steps for the fastcore library:\n",
+    " \n",
+    "```python\n",
+    "git clone https://github.com/fastai/fastcore\n",
+    "cd fastcore\n",
+    "pip install -e .\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For those following along and who are familiar with this option, they might notice that there is a discrepancy between this method and the one found on the fastai2 repository:\n",
+    "\n",
+    "```python\n",
+    "git clone https://github.com/fastai/fastai2\n",
+    "cd fastai2\n",
+    "pip install -e \".[dev]\"\n",
+    "```\n",
+    "\n",
+    "Using the `[dev]` flag issue an order to the installer to pip install all the package listed under the dev requirements (`dev_requirements = nbdev`). This means the `nbdev` package (its a fastai package) will be installed from the pypi repository. Given the fact that nbdev is also under heavy development, we may experienced some issues caused by a misalignment between the 3 different fastai pacjkages being fastai2, fastcore, and nbdev. For that reason, it is desirable to also install the nbdev package as an editable package as follow:\n",
+    "\n",
+    "```python\n",
+    "git clone https://github.com/fastai/nbdev\n",
+    "cd nbdev\n",
+    "pip install -e .\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we installed our editable package, how are we going to update it. The answer is very straightforward, we pull our latest version from the corresponding GitHub repository. Therefore, for the fastai2 package, we just have to hop to the forder where we clone the original repo, and  we run the following command:\n",
+    "\n",
+    "```python\n",
+    "git pull\n",
+    "```\n",
+    "This command will both update our repo and update our editable package has the version changed. We have to run the command, here above, for both fastai2 and fastcore.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix A: How to install Anaconda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On linux:\n",
+    "\n",
+    "```python\n",
+    "$ curl -O https://repo.anaconda.com/archive/Anaconda3-2019.10-Linux-x86_64.sh\n",
+    "\n",
+    "$ sha256sum Anaconda3-2019.10-Linux-x86_64.sh\n",
+    "46d762284d252e51cd58a8ca6c8adc9da2eadc82c342927b2f66ed011d1d8b53  Anaconda3-2019.10-Linux-x86_64.sh\n",
+    "\n",
+    "$ bash Anaconda3-2019.10-Linux-x86_64.sh\n",
+    "$ source ~/.bashrc\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Youtube tutorial**\n",
+    "\n",
+    "> youtube: https://www.youtube.com/watch?v=2TRsrZRGzXY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix B: How to create a conda virtual enviroment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On both Linux and Windows run the following commands:\n",
+    "\n",
+    "```python\n",
+    "conda create -n fastai2 python=3.6 anaconda\n",
+    "conda activate fastai2\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Tip: You can choose with version of python you would like to install. In the case above, the version 3.6 will be installed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ]
