added appendix B, C, and D

--- a/_notebooks/2020-03-16-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-16-how-to-pip-install-package.ipynb
@@ -163,13 +163,13 @@
     "You might have already noticed that we replaced `fastai2` by ` git+https://github.com/fastai/fastai2.git` which means that you are installing the latest source code found in the fastai2 GitHub repository.\n",
     ">Important: When using this option, it is very important to also install the `fastcore` library` using the very same method:\n",
     "\n",
+    "\n",
     "from the command line:\n",
     "```python\n",
     "pip install git+https://github.com/fastai/fastai2.git\n",
     "``` \n",
     "\n",
     "and from a Jupyter notebook cell:\n",
-    "\n",
     "```python\n",
     "!pip install git+https://github.com/fastai/fastai2.git\n",
     "``` "
@@ -300,6 +300,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### On Windows:\n",
+    "\n",
+    "- Download Anaconda Windows installer [here](https://www.anaconda.com/distribution/#download-section) \n",
+    "- Select Python 3.6 or higher \n",
+    "- Run the installer and follow the instructions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Youtube tutorial**\n",
+    "\n",
+    "> youtube: https://www.youtube.com/watch?v=2TRsrZRGzXY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Appendix B: How to create a conda virtual enviroment"
    ]
   },
@@ -325,6 +345,134 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Appendix C: Useful `conda` commands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Install a python package (e.g. fastai2) from the pypi repository:\n",
+    "\n",
+    "```python\n",
+    "pip install fastai\n",
+    "```\n",
+    "\n",
+    "- Uninstall a python package (e.g. fastai2):\n",
+    "\n",
+    "```python\n",
+    "pip uninstall fastai2\n",
+    "```\n",
+    "\n",
+    "- Show some information about a package (e.g. fastai2)\n",
+    "\n",
+    "```\n",
+    "Pip show fastai2\n",
+    "```\n",
+    "\n",
+    "This is what it displayed on my machine, at the moment of publishing the present post:\n",
+    "\n",
+    "```python\n",
+    "Name: fastai2\n",
+    "Version: 0.0.11\n",
+    "Summary: Version 2 of the fastai library\n",
+    "Home-page: https://github.com/fastai/fastai2\n",
+    "Author: Jeremy Howard, Sylvain Gugger, and contributors\n",
+    "Author-email: info@fast.ai\n",
+    "License: Apache Software License 2.0\n",
+    "Location: /home/farid/anaconda3/envs/fastai2/lib/python3.6/site-packages\n",
+    "Requires: scikit-learn, pandas, fastprogress, requests, scipy, pillow, torchvision, matplotlib, pyyaml, spacy, torch, fastcore\n",
+    "Required-by:\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix D: Useful `conda` command to be familiar with"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Create a conda virtual environment called `fastai2` with python 3.6 version\n",
+    "\n",
+    "```python\n",
+    "conda create -n fastai2 python=3.6 anaconda\n",
+    "```\n",
+    "\n",
+    "- Activate a conda virtual environment called `fastai2`\n",
+    "\n",
+    "```python\n",
+    "conda activate fastai2\n",
+    "```\n",
+    "\n",
+    "- List all the conda virtual environments\n",
+    "\n",
+    "```python\n",
+    "conda env list\n",
+    "```\n",
+    "\n",
+    "- List all the packages installed in the current conda virtual environments\n",
+    "\n",
+    "```python\n",
+    "conda list\n",
+    "```\n",
+    "\n",
+    "- Install a python package (e.g. torch) from the pypi repository:\n",
+    "\n",
+    "```python\n",
+    "conda install torch -c torch\n",
+    "```\n",
+    "-c : indicate which channel to use to install the corresponding package\n",
+    "\n",
+    "- Uninstall a python package (e.g. torch):\n",
+    "\n",
+    "```python\n",
+    "conda uninstall torch\n",
+    "```\n",
+    "\n",
+    "- List all the packages installed that start with `fast` in the current conda virtual environments\n",
+    "\n",
+    "```python\n",
+    "conda list fast\n",
+    "```\n",
+    "\n",
+    "This is what it is presently displayed on machine:\n",
+    "\n",
+    "```python\n",
+    "# Name              Version                 Build  Channel\n",
+    "fastai2             0.0.12                  dev_0    <develop>\n",
+    "fastcache           1.1.0                   py36h7b6447c_0\n",
+    "fastcore            0.1.15                  dev_0    <develop>\n",
+    "fastprogress        0.2.2                   pypi_0    pypi\n",
+    "fastscript          0.1.4                   pypi_0    pypi\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel: dev_0 <develop> which means that they both are editable versions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "This is an overview that describes 3 methods to install any released package. In this article, I described the fastai2 library use-case. fastai2 is still under development. I also explained the goal of each of these 3 methods, and how to select which method is more suitable to your specific use-case. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ]
