--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### On linux:\n",
+    "### On linux\n",
     "\n",
     "```python\n",
     "$ curl -O https://repo.anaconda.com/archive/Anaconda3-2019.10-Linux-x86_64.sh\n",
@@ -291,16 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Youtube tutorial**\n",
-    "\n",
-    "> youtube: https://www.youtube.com/watch?v=2TRsrZRGzXY"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### On Windows:\n",
+    "### On Windows\n",
     "\n",
     "- Download Anaconda Windows installer [here](https://www.anaconda.com/distribution/#download-section) \n",
     "- Select Python 3.6 or higher \n",
@@ -311,16 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Youtube tutorial**\n",
-    "\n",
-    "> youtube: https://www.youtube.com/watch?v=2TRsrZRGzXY"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Appendix B: How to create a conda virtual enviroment"
+    "## Appendix B: Create a conda virtual enviroment"
    ]
   },
   {
@@ -346,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appendix C: Useful `conda` commands"
+    "## Appendix C: Useful conda commands"
    ]
   },
   {
@@ -391,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appendix D: Useful `conda` command to be familiar with"
+    "## Appendix D: Useful conda commands"
    ]
   },
   {
@@ -457,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel: dev_0 <develop> which means that they both are editable versions."
+    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel: **dev_0** which means that they both are editable versions."
    ]
   },
   {
