fix minor mistakes

--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -23,10 +23,10 @@
    "metadata": {},
    "source": [
     "# 3 ways to pip install a package - fastai2 use-case\n",
-    "> detailed description on how to pip install a package and to understand when to use each of the 3 methods for your own use-case.\n",
+    "> detailed description on how to pip install a package using 3 methods, and understand which method to use for your own use-case.\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
     "- categories: [python]\n",
     "- author: Farid Hassainia, PhD"
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this article, I will show 3 methods to install the new fastai2 library using `pip install`. The 3 methods described here can be used to similar python libraries found on GitHub. I voluntarily omitted the `conda install` option because I wanted too focus on methods that can be reproduced in free cloud environment such as Google Colab.\n"
+    "In this article, I will show 3 methods to install the new fastai2 library using `pip install`. The 3 methods described here can be used to similar python libraries found on GitHub. I voluntarily omitted the `conda install` option because I wanted to focus on the methods that can be reproduced in any free cloud environment such as Google Colab.\n"
    ]
   },
   {
@@ -59,12 +59,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although, fastai2 is still under development and its official release is expected this summer, it is important to be familiar with the present method especially if you will be using it in a production setting. It is also common to freeze install a package: installing a specific version a package (e.g `pip install torch== 1.4.0`). \n",
+    "Although, fastai2 is still under development and its official release is expected to be during the next summer, it is important to be familiar with this first method especially if you intend to use fastai2 in a production setting. \n",
     "\n",
     "To install fastai2 from [fastai2 pypi repository] (https://pypi.org/project/fastai2/), type the following command either from:\n",
     "\n",
     "1.\tthe terminal:\n",
-    "```python\n",
+    "```shell\n",
     "pip install fastai2\n",
     "```\n",
     "\n",
@@ -80,7 +80,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Important: Activate the virtual environment of your choice before installing any python package. Lacking to do so, the package will be installed your current virtual environment. This means that most likely, it will be installed in the `base` virtual environment in Ananconda (`base` is the default virual environment created when you installed Anaconda)"
+    "> Tip: If you use fastai2 (or any established python package), It is considered as good practice to freeze install a package: This means installing a specific version of a package (e.g `pip install torch== 1.4.0`). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Important: Following the best practices, it is importante to create and activate a virtual environment before installing any python package. Lacking to do so, the package will be installed in your current virtual environment. This means that most likely, it will be installed in the `base` virtual environment in Ananconda (`base` is the default virual environment created when you installed Anaconda)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I create on my local machine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python \n",
+    "conda env list\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# conda environments:\n",
+    "#\n",
+    "base                     /home/farid/anaconda3\n",
+    "fastai2                  /home/farid/anaconda3/envs/fastai2\n",
+    "fastai2_dev           *  /home/farid/anaconda3/envs/fastai2_dev\n",
+    "gluon                    /home/farid/anaconda3/envs/gluon\n",
+    "prophet                  /home/farid/anaconda3/envs/prophet\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The asterisk (*) indicates the active virtual environment"
    ]
   },
   {
@@ -423,7 +463,7 @@
     "conda list fast\n",
     "```\n",
     "\n",
-    "This is what it is presently displayed on machine:\n",
+    "Output on my machine indicating the package name, current installed version, and the channel:\n",
     "\n",
     "```python\n",
     "# Name              Version                 Build  Channel\n",
@@ -439,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel: **dev_0** which means that they both are editable versions."
+    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel: **dev_0** indicating that they both are editable versions."
    ]
   },
   {
